frontend: Fixes a dead character, fixes heartbeat message alignment

--- a/src/karmen_frontend/src/assets/styles.scss
+++ b/src/karmen_frontend/src/assets/styles.scss
@@ -261,6 +261,7 @@ input[type=text], select {
   left: 0;
   width: 100%;
   line-height: $spacing-default * 2;
+  padding: 0 $spacing-default;
   background-color: map-get($palette, red);
   color: map-get($palette, white);
 }
